fix(material/chip): remove button is too small
Fixes Angular Components Chip component where the touch target of the
remove button of a chip is too small. Updates .mat-mdc-chip-remove to
target more specific styles to override original style of padding: 8px
so that the user has a larger touch target particularly on mobile
devices.

Fixes b/286959517

--- a/src/material/chips/chip.scss
+++ b/src/material/chips/chip.scss
@@ -396,6 +396,12 @@
     font-size: mdc-chip-theme.$trailing-action-size;
     box-sizing: content-box;
   }
+  /** Increases mdc-dhip-remove trailing icon action touch-target
+    in order to fix b/286959517. */
+  &.mat-mdc-chip-trailing-icon.mdc-evolution-chip__action--trailing,
+  &.mat-mdc-chip-trailing-icon.mdc-evolution-chip__icon--trailing {
+    padding: 24px 12px;
+  }
 }
 
 .mat-chip-edit-input {
